--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -72,4 +73,9 @@ dependencies {
     // Activity KTX for viewModels()
     implementation "androidx.activity:activity-ktx:$activity_ktx_version"
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
 }
