login before merge

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:theme="@style/Theme.Hargain"
         tools:targetApi="31">
         <activity
-            android:name="com.bangkit.hargain.MainActivity"
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Hargain.NoActionBar">
