--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Hargain"
+        android:theme="@style/Theme.Hargain.NoActionBar"
         tools:targetApi="31">
         <activity
             android:name=".presentation.login.LoginActivity"
             android:exported="false"
-            android:label="@string/title_activity_login" />
+            />
         <activity
-            android:name=".presentation.main.home.MainActivity"
+            android:name=".presentation.main.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Hargain.NoActionBar">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
