--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,5 +87,8 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
 
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+
 
 }
