--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hargain.NoActionBar"
-        tools:targetApi="31">
+        tools:targetApi="30"
+        android:usesCleartextTraffic="true"
+        >
         <activity
             android:name=".presentation.login.LoginActivity"
             android:exported="false"
