--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,11 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
+        classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_hilt_version"
         classpath 'com.google.gms:google-services:4.3.10' // firebase
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2" // safearg
 
 
 
