--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,7 @@ dependencies {
     // Activity KTX for viewModels()
     implementation "androidx.activity:activity-ktx:$activity_ktx_version"
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
-
+    implementation 'com.google.firebase:firebase-storage-ktx'
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:30.0.1')
     implementation 'com.google.firebase:firebase-firestore-ktx'
