--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,8 @@ android {
 
     buildTypes {
         debug {
-            buildConfigField("String", "API_BASE_URL", "\"" + "https://6293b7937aa3e6af1a0fecc3.mockapi.io/api/v1/" + "\"")
+//            buildConfigField("String", "API_BASE_URL", "\"" + "https://6293b7937aa3e6af1a0fecc3.mockapi.io/api/v1/" + "\"")
+            buildConfigField("String", "API_BASE_URL", "\"" + "https://us-central1-hargain-f7a81.cloudfunctions.net/" + "\"")
             buildConfigField("String", "GOOGLE_API_KEY", "\"" + localProperties['GOOGLE_API_KEY'] + "\"")
         }
         release {
@@ -78,7 +79,7 @@ dependencies {
     // dagger - Hilt
     implementation "com.google.dagger:hilt-android:$dagger_hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$dagger_hilt_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$dagger_hilt_viewmodel_version"
+//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$dagger_hilt_viewmodel_version"
     kapt "androidx.hilt:hilt-compiler:$dagger_hilt_viewmodel_version"
 
     // Activity KTX for viewModels()
