--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,6 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:1.1.0-beta01"
     implementation "androidx.camera:camera-view:1.1.0-beta01"
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.1"
+
 }
