--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-parcelize'
+//    id 'kotlin-parcelize'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
@@ -104,5 +105,7 @@ dependencies {
     implementation "androidx.camera:camera-view:1.1.0-beta01"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.1"
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 }
