--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,7 @@ buildscript {
 //        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2" // safearg
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.2"
 
-
-
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -47,6 +46,8 @@ allprojects {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
+        maven { url 'https://jitpack.io' }
+
     }
 }
 
