chore: upgrade gradle version

--- a/build.gradle
+++ b/build.gradle
@@ -26,13 +26,13 @@ buildscript {
     }
     dependencies {
 //        classpath "com.android.tools.build:gradle:7.0.4"
-        classpath "com.android.tools.build:gradle:4.2.1"
+        classpath "com.android.tools.build:gradle:4.2.2"
 
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_hilt_version"
         classpath 'com.google.gms:google-services:4.3.10' // firebase
 //        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2" // safearg
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.2"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
 
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
 
@@ -45,7 +45,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        mavenCentral() // Warning: this repository is going to shut down soon
         maven { url 'https://jitpack.io' }
 
     }
